<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pedergb.vors.SettingsActivity"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="casual"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/colorTitles"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/language"
        android:textAllCaps="false"
        android:textColor="@color/colorTitles"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/setup"
        />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/norwegian"
        android:layout_below="@+id/language"
        android:layout_alignEnd="@+id/setup" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/english"
        android:layout_below="@+id/radioButton"
        android:layout_alignStart="@+id/radioButton" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ntnu"
        android:layout_below="@+id/radioButton2"
        android:layout_alignStart="@+id/radioButton4" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/custom"
        android:layout_below="@+id/radioButton3"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back"
        android:background="@null"
        android:alpha="0.6"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
