<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pedergb.vors.BeforePowerHour"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:fontFamily="casual"
        android:text="@string/setup"
        android:textAllCaps="false"
        android:textColor="@color/colorTitles"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/allwaysOnDisplay"
        android:layout_below="@+id/setup"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorText2"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/start"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"/>

</RelativeLayout>
