<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pedergb.vors.MenuActivity"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/vors"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/start"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/power_hour"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"/>


    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/drunkest"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"/>


    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/questions"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"/>


    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/settings"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorButton"/>

</RelativeLayout>
