<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pedergb.vors.BeforeGame"
    android:background="@color/colorBackground">


    <TextView
        android:id="@+id/setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:fontFamily="casual"
        android:text="@string/names"
        android:textAllCaps="false"
        android:textColor="@color/colorTitles"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setup"
        android:layout_marginStart="40dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:text="@string/add" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:id="@+id/listNames"
        android:focusableInTouchMode="false"
        android:isScrollContainer="false"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/btAdd"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/start"
        android:textColor="@color/colorText2"
        android:backgroundTint="@color/colorButton"/>


</RelativeLayout>
